--- a/.github/workflows/updatedComparejson.yml
+++ b/.github/workflows/updatedComparejson.yml
@@ -63,8 +63,8 @@ jobs:
               //const oldData = await fetchJson(process.env.OLD_URL);
               //const newData = await fetchJson(process.env.NEW_URL);
               // Uncomment these lines if you want to use local JSON files
-               const oldData = require('old_data.json');
-               const newData = require('new_data.json');
+               const oldData = await loadJsonFromUrlOrFile(process.env.OLD_URL, 'old_data.json');
+               const newData = await loadJsonFromUrlOrFile(process.env.NEW_URL, 'new_data.json');
 
               const workbook = new ExcelJS.Workbook();
               const dataByParentKey = {};
